--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
         "tsx": "^4.19.1",
         "typescript": "^5.6.3",
         "typescript-eslint": "^8.9.0"
+    },
+    "dependencies": {
+        "zod": "^3.23.8"
     }
 }
