--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -21,17 +21,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: true
 
       - name: Set up Node ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: npm
 
       - name: Install dependencies
-        run: npm install
+        run: npm install-clean
 
       - name: Run lint
-        run: npm run lint 
+        run: npm run lint:check
